Format code of all Java projects using Eclipse formatter